# Axis

./: .gitignore  README.md  ai_alignment_engine_pitch_deck_doc.md  docker-compose.yml  dummy_test.md
backend/: .env.example  alembic.ini  chat_test_report.md  diff.txt  import_gitlab_foss_slice.py  import_gitlab_shell.py  pyproject.toml  pytest_output.txt  pytest_output_utf8.txt  seed.py  seed_demo.py  seed_rich_demo.py  test_chat_scenarios.py  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 41d1f986350d_add_projectdocument_model.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  documents.py  graph.py  projects.py  search.py  webhooks.py
backend/app/connectors/: __init__.py  base.py  registry.py
backend/app/connectors/gitlab/: __init__.py  client.py  connector.py
backend/app/database/: __init__.py  qdrant.py
backend/app/models/: __init__.py  document.py  embedding.py  event.py  feature.py  graph.py  project.py  user.py  vector.py
backend/app/scripts/: __init__.py  clean_db.py  manage_gitlab.py  test_project_delete_dedup.py
backend/app/services/: __init__.py  advanced_retrieval.py  chat.py  embedding.py  embeddings.py  evaluation.py  gitlab.py  graph.py  graph_ingestion.py  ingestion.py  search.py  tracing.py  vector_sync.py
backend/tests/: conftest.py  test_advanced_rag_unit.py  test_chat.py  test_graph.py  test_graph_ingestion.py  test_hybrid_search.py
docs/: AI_CONTEXT.md  API_SPEC.md  ARCHITECTURE.md  CODING_GUIDELINES.md  DATABASE_SCHEMA.md  PRD.md  TASKS.md  (+1 more)
(+18 files in other folders)
